--- a/certs_and_dns/config-domain.yaml
+++ b/certs_and_dns/config-domain.yaml
@@ -6,7 +6,7 @@ metadata:
 data:
   # These are example settings of domain.
   # example.org will be used for routes having app=prod.
-  example.org: |
+  knative.justingrayston.com: |
     selector:
       app: prod
   # Default value for domain, for routes that does not have app=prod labels.
