The, sort of works initialish commit

--- a/certs_and_dns_old/cert-manager.yaml
+++ b/certs_and_dns_old/cert-manager.yaml
@@ -8,7 +8,7 @@ spec:
     server: https://acme-v02.api.letsencrypt.org/directory
     # This will register an issuer with LetsEncrypt.  Replace
     # with your admin email address.
-    email: myemail@gmail.com
+    email: justingrayston@gmail.com
     privateKeySecretRef:
       # Set privateKeySecretRef to any unused secret name.
       name: letsencrypt-issuer
