--- a/certs_and_dns_old/ingress-gateway.yaml
+++ b/certs_and_dns_old/ingress-gateway.yaml
@@ -1,11 +1,11 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: knative-shared-gateway
+  name: knative-ingress-gateway
   namespace: knative-serving
 spec:
   selector:
-    knative: ingressgateway
+    istio: ingressgateway
   servers:
   - port:
       number: 80
@@ -13,6 +13,8 @@ spec:
       protocol: HTTP
     hosts:
     - "*"
+    tls:
+      httpsRedirect: true # sends 301 redirect for http requests.
   - port:
       number: 443
       name: https
@@ -20,7 +22,6 @@ spec:
     hosts:
     - "*"
     tls:
-      httpsRedirect: true # sends 301 redirect for http requests.
       mode: SIMPLE
       privateKey: /etc/istio/ingressgateway-certs/tls.key
       serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
